# mxcp

./: .cursorrules  .gitignore  AUTH_REFACTOR_GUIDE.md  CODE_OF_CONDUCT.md  DESIGN.md  LICENSE  README.md  SECURITY.md  agent-help.md  check-all.sh  format-all.sh  mxcp-site.yml  pydantic-migration-plan.md  pyproject.toml  raw-site.yml  release.sh
.agent/execplans/: verifier-mode.md
.cursor/rules/: cli-implementation.mdc  cli-stability.mdc  code-organization.mdc  coding-conventions.mdc  dependencies.mdc  development.mdc  documentation.mdc  project-structure.md  testing.mdc
.github/: RELEASE_PROCESS.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker-build.yml  docs.yml  performance.yml  pr-validation.yml  publish.yml  release.yml
auth/: cursor_rethinking_mxcp_authentication_i.md
docker/: .dockerignore  Dockerfile  README.md
docker/hello-site/: mxcp-config.yml  mxcp-site.yml
docs/: DESIGN.md  README.md  __README.md  auditing.md  authentication.md  cli.md  configuration.md  dev-guide.md  drift-detection.md  index.md  integrations.md  overview.md  plugins.md  policies.md  quickstart.md  type-system.md
docs/concepts/: endpoints.md  index.md  production-methodology.md  project-structure.md  type-system.md
docs/contributing/: auth-oauth.md  index.md
docs/contributors/: _category_.json  auth-oauth.md  dev-guide.md
docs/examples/: analytics.md  customer-service.md  data-management.md  index.md
docs/features/: _category_.json  auditing.md  drift-detection.md  index.mdx  lifecycle-commands.md  overview.md  policies.md  python-endpoints.md
docs/getting-started/: _category_.json  glossary.md  introduction.md  overview.md  quickstart.md
docs/guides/: _category_.json  admin-socket.md  audit-cleanup.md  authentication.md  configuration.md  dev-guide.md  integrations.md  observability.md  operational.md  production-methodology.md  quality.md  telemetry.md
docs/integrations/: claude-desktop.md  dbt.md  duckdb.md  index.md
docs/operations/: admin-socket.md  audit-cleanup.md  configuration.md  deployment.md  index.md  monitoring.md
docs/plans/: 2026-03-04-capability-mapper-design.md  2026-03-04-capability-mapper-plan.md
docs/quality/: evals.md  index.md  linting.md  testing.md  validation.md
docs/reference/: _category_.json  cli.md  common-tasks.md  index.md  index.mdx  plugins.md  python.md  schema-prompt.md  schema-resource.md  schema-site-config.md  schema-tool.md  schema-user-config.md  sql.md  type-system.md  yaml-schema.md
docs/schemas/: index.md  prompt.md  resource.md  site-config.md  tool.md  user-config.md
docs/security/: auditing.md  authentication.md  index.md  policies.md
docs/tutorials/: hello-world.md  index.md  python-endpoints.md  sql-endpoints.md
examples/: hello.yml
examples/confluence/: README.md  config.yml  cql_query.yml  describe_page.yml  get_children.yml  get_page.yml  list_spaces.yml  mxcp-site.yml  search_pages.yml
examples/covid_owid/: README.md  dbt_project.yml  mxcp-site.yml
examples/earthquakes/: README.md  mxcp-site.yml  prompt.yml  raw-site.yml  tool.yml
examples/google-calendar/: README.md  config.yml
examples/jira/: README.md  config.yml  get_project.yml  get_user.sql  get_user.yml  jql.yml  list_projects.sql  list_projects.yml  mxcp-site.yml
examples/jira-oauth/: README.md  config.yml  mxcp-site.yml
examples/keycloak/: config.yml  mxcp-site.yml
examples/lifecycle-example/: README.md  mxcp-site.yml
examples/oidc/: README.md  config.yml  mxcp-site.yml
examples/oidc-verifier/: README.md  config.yml  mxcp-site.yml
examples/plugin/: README.md  config.yml  decipher.yml  mxcp-site.yml
examples/python-demo/: README.md
examples/salesforce/: README.md  config.yml  describe_sobject.yml  get_sobject.yml  list_sobjects.yml  mxcp-site.yml  search.yml  soql.yml  sosl.yml
examples/salesforce-oauth/: README.md  config.yml
examples/simple-eval-demo/: demo-evals.yml  mxcp-site.yml
examples/squirro/: SQUIRRO_SEARCH_TOOL.md  llms.txt  mxcp-site.yml  pytest.ini  requirements.txt  result.json
examples/systemd/: README.md  mxcp-audit-cleanup.service  mxcp-audit-cleanup.timer
examples/uae/: mxcp-site.yml
resources/: auth-redesign-plan.md
scripts/: README.md  publish.py  publish.sh  release.py  test_oidc_verifier_e2e.py
src/mxcp/: __main__.py  py.typed
src/raw/: __main__.py
tests/: __init__.py  conftest.py  test_audit_exporters.py  test_cli.py  test_cli_audit_cleanup.py  test_cli_dev.py  test_cli_init.py  test_cli_lint.py  test_cli_run.py  test_config_reload.py  test_core_analytics.py  test_core_config.py  test_drift_check.py  test_endpoint_execution.py  test_evals.py  test_evals_tool_executor.py  test_external_refs.py  test_file_url_integration.py  test_integration.py  test_list.py  test_mcp.py  test_nat_handling.py  test_onepassword_integration.py  test_plugin_base.py  test_policies.py  test_policies_integration.py  test_python_concurrent.py  test_python_endpoints.py  test_python_return_types.py  test_references.py  test_return_type_validation.py  test_runner.py  test_runtime.py  test_secret_injection.py  test_secrets.py  test_server_reload.py  test_sql_query_empty_results_bug.py  test_tester.py  test_tester_assertions.py  test_type_converter.py  (+3 more)
tests/executor/: test_duckdb_executor.py  test_execution_engine.py  test_python_executor.py
tests/lsp/: README.md
tests/misc/: test_no_dict_model_unions.py
tests/sdk/: __init__.py
tests/server/: __init__.py  helpers.py  test_admin_api.py  test_api.py  test_audit_exporters.py  test_audit_trace_id.py  test_audit_user_context.py  test_audit_utils.py  test_cli.py  test_cli_audit_cleanup.py  test_cli_init.py  test_cli_lint.py  test_cli_run.py  test_cli_serve.py  test_drift_check.py  test_endpoint_execution.py  test_endpoint_loader_encoding.py  test_evals.py  test_evals_service.py  test_evals_tool_executor.py  test_external_refs.py  test_file_url_integration.py  test_init_hooks_db_access.py  test_integer_conversion_bug.py  test_integration.py  test_list.py  (+29 more)
(+871 files in other folders)
