[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mxcp"
version = "0.3.0"
description = "Enterprise MCP framework for building production AI tools with SQL/Python, featuring security, audit trails, and policy enforcement"
authors = [{ name = "RAW Labs SA", email = "mxcp@raw-labs.com" }]
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",  # Official MCP Python SDK
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "jsonschema",
    "duckdb>=0.9.2",
    "jinja2>=3.1.3",
    "aiohttp>=3.8.0",  # Required for MCP HTTP transport
    "starlette>=0.27.0",  # Required for MCP HTTP transport
    "makefun",
    "pandas>=2.0.0",  # Required for DuckDB DataFrame operations
    "posthog>=3.0.0",  # For anonymous usage analytics
    "dbt-core>=1.6.0",  # dbt core for data transformations
    "dbt-duckdb>=1.6.0",  # dbt DuckDB adapter
    "cel-python>=0.2.0",  # Common Expression Language for policy enforcement
    "httpx>=0.25.0"  # For calling LLM APIs in evals
]

[project.scripts]
mxcp = "mxcp.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",  # For testing async code
    "pytest-cov",  # For test coverage
    "pytest-mock",  # For better mock integration with pytest
    "pytest-timeout",  # For test timeout protection
    "aioresponses",  # For mocking HTTP requests
    "black",  # For code formatting
    "isort",  # For import sorting
    "mypy",  # For type checking
    "hvac>=2.0.0",  # For testing Vault integration
    "build",  # For building the package
    "twine",  # For publishing to PyPI
]
vault = [
    "hvac>=2.0.0",  # HashiCorp Vault client for vault:// URL support
]
core = [
    "jsonschema>=4.0.0",  # JSON schema validation for config files
    "pyyaml>=6.0.1",  # YAML parsing for configuration files
    "hvac>=2.0.0",  # HashiCorp Vault client for vault:// URL support
    "onepassword-sdk>=0.3.0",  # 1Password SDK for op:// URL support
    "posthog>=3.0.0",  # For anonymous usage analytics in core modules
]
onepassword = [
    "onepassword-sdk>=0.3.0",  # 1Password SDK for op:// URL support
]
all = [
    "hvac>=2.0.0",  # HashiCorp Vault client for vault:// URL support
    "onepassword-sdk>=0.3.0",  # 1Password SDK for op:// URL support
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mxcp", "mxcp.audit", "mxcp.cli", "mxcp.config", "mxcp.config.schemas", "mxcp.server", "mxcp.auth", "mxcp.drift", "mxcp.drift.schemas", "mxcp.endpoints", "mxcp.endpoints.schemas", "mxcp.engine", "mxcp.plugins", "mxcp.policies", "mxcp.evals", "mxcp.evals.schemas", "mxcp.runtime", "mxcp.core", "mxcp.core.analytics", "mxcp.core.config", "mxcp.core.config.resolvers", "mxcp.core.config.schemas", "mxcp.validator", "mxcp.validator.schemas", "mxcp.executor", "mxcp.executor.plugins"]
include-package-data = true

[tool.setuptools.package-data]
"mxcp.config.schemas" = ["*.json"]
"mxcp.endpoints.schemas" = ["*.json"]
"mxcp.drift.schemas" = ["*.json"]
"mxcp.evals.schemas" = ["*.json"]
"mxcp.core.config.schemas" = ["*.json"]
"mxcp.validator.schemas" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
asyncio_mode = "auto"  # Enable async test support
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

